# zmake

./: CMakeLists.txt  README.md
src/: common.cpp  common.h  singleton.h  zcmake.cpp  zcmake.h  zmain.cpp  zmake.cpp  zmake.h  zmconf.cpp  zmconf.h  zmdbg.c  zmdbg.h  zmfile.cpp  zmfile.h  zmopt.cpp  zmopt.h  zxml.cpp  zxml.h
