PROJECT(zmake)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_COMPILE_OPTIONS(-Wno-write-strings)
#SET(CMAKE_CXX_FLAGS "-w")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -MMD -fPIC -Wall")
AUX_SOURCE_DIRECTORY(./src DIR_SRCS)
SET(EXECUTABLE_OUTPUT_PATH "./build/bin")

ADD_EXECUTABLE(zm ${DIR_SRCS})
TARGET_LINK_LIBRARIES(zm pthread)

SET(CMAKE_INSTALL_PREFIX "/")
INSTALL(TARGETS zm RUNTIME DESTINATION usr/bin)

INSTALL(DIRECTORY build/zmake DESTINATION etc
	PATTERN "build/zmake/*" 
	PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ)

